# BevarMejo

./: .gitignore  CMakeLists.txt  README.md
Anytown/: CMakeLists.txt  main_anytown_test.cpp  opt_anytown.cpp  prob_anytown.cpp  prob_anytown.hpp
Anytown/mixed/: CMakeLists.txt  opt_anytown_mixed_f1.cpp  prob_at_mix_f1.cpp  prob_at_mix_f1.hpp  prob_at_mix_f_1.cpp  prob_at_mix_f_1.hpp  sim_anytown_mixed_f1.cpp
Anytown/mixed_f1/: model_anytown.cpp  model_anytown.hpp  opt_anytown_mixed_f1.cpp  sim_anytown_mixed_f1.cpp
Anytown/operations/: prob_at_ope_f1.cpp  prob_at_ope_f1.hpp
Anytown/rehab/: prob_at_reh_f1.cpp  prob_at_reh_f1.hpp  sim_anytown_rehab_f1.cpp
Anytown/rehab_f1/: CMakeLists.txt  model_anytown.cpp  model_anytown.hpp  opt_anytown_rehab_f1.cpp  sim_anytown_rehab_f1.cpp
Anytown/src/: CMakeLists.txt  model_anytown.cpp  model_anytown.hpp
Anytown/twophases/: prob_at_2ph_f1.cpp  prob_at_2ph_f1.hpp
Hanoi/: CMakeLists.txt  main_hanoi.cpp  main_hanoi.h  problem_hanoi_biobj.cpp  problem_hanoi_biobj.hpp
Hanoi/include/: hanoi.hpp  model_hanoi.hpp
Hanoi/src/: CMakeLists.txt  hanoi.cpp  hanoi.hpp  model_hanoi.cpp
bevarmejolib/: CMakeLists.txt
bevarmejolib/include/bevarmejo/: bemexcept.hpp  constants.hpp  econometric_functions.hpp  experiment.hpp  factories.hpp  hydraulic_functions.hpp  io.hpp  labels.hpp  library_metadata.hpp  nsga2_helper.hpp  pagmo_helpers.hpp  parsers.hpp  quantity_series.hpp  resilience_index.hpp  subnetwork.hpp  time_series.hpp  type_traits.hpp  water_distribution_system.hpp  wds_problem.hpp
bevarmejolib/include/bevarmejo/.legacy/: io.hpp
bevarmejolib/include/bevarmejo/epanet_helpers/: en_help.hpp  en_helpers.hpp  en_time_options.hpp
bevarmejolib/include/bevarmejo/evaluation/: metric.hpp
bevarmejolib/include/bevarmejo/evaluation/metrics/: hydraulic_functions.hpp
bevarmejolib/include/bevarmejo/io/: aliased_key.hpp  fsys.hpp  fsys_helpers.hpp  json.hpp  json_serializers.hpp  key.hpp  labels.hpp  streams.hpp
bevarmejolib/include/bevarmejo/io/keys/: beme.hpp  bemeexp.hpp  bemeopt.hpp  bemesim.hpp
bevarmejolib/include/bevarmejo/pagmo_helpers/: containers_help.hpp  containers_serializers.hpp  default_objects_serializers.hpp  udc_help.hpp
bevarmejolib/include/bevarmejo/pagmo_helpers/algorithms/: nsga2_help.hpp
bevarmejolib/include/bevarmejo/problem/: decision_variable.hpp  wds_problem.hpp
bevarmejolib/include/bevarmejo/problems/: anytown.hpp  anytown_systol25.hpp  hanoi.hpp
bevarmejolib/include/bevarmejo/simulation/: hyd_sim_settings.hpp
bevarmejolib/include/bevarmejo/utility/: bemememory.hpp  bememory.hpp  except.hpp  exceptions.hpp  io.hpp  library_metadata.hpp  memory.hpp  metadata.hpp  quantity_series.hpp  registry.hpp  registry_range.hpp  registry_users.hpp  registry_users.ipp  registry_view.hpp  safe_member.hpp  safe_member_ptr.hpp  string.hpp  string_manip.hpp  time.hpp  type_traits.hpp  unique_string_sequence.hpp
bevarmejolib/include/bevarmejo/utility/epanet/: exceptions.hpp  time.hpp
bevarmejolib/include/bevarmejo/utility/pagmo/: containers_serializers.hpp
bevarmejolib/include/bevarmejo/utils/: string_manip.hpp
bevarmejolib/include/bevarmejo/wds/: element.hpp  elements_group.cpp  elements_group.hpp  subnetwork.cpp  subnetwork.hpp  user_defined_elements_group.cpp  user_defined_elements_group.hpp  water_distribution_system.cpp  water_distribution_system.hpp
bevarmejolib/include/bevarmejo/wds/auxiliary/: curve.hpp  curves.cpp  curves.hpp  demand.hpp  global_time_options.hpp  global_times.hpp  pattern.cpp  pattern.hpp  quantity_series.hpp  time_series.hpp
bevarmejolib/include/bevarmejo/wds/collections/: registry.hpp
bevarmejolib/include/bevarmejo/wds/data_structures/: constant_ts.hpp  data_entity.hpp  demand.hpp  pattern.cpp  (+7 more)
bevarmejolib/src/: experiment.cpp  factories.cpp  hydraulic_functions.cpp  io.cpp  library_metadata.cpp  parsers.cpp  resilience_index.cpp  subnetwork.cpp  time_series.cpp  water_distribution_system.cpp
bevarmejolib/src/evaluation/metrics/: hydraulic_functions.cpp
bevarmejolib/src/io/: fsys_helpers.cpp  json_serializers.cpp  key.cpp
bevarmejolib/src/pagmo_helpers/: containers_help.cpp  containers_serializers.cpp  default_objects_serializers.cpp
bevarmejolib/src/problem/: decision_variable.cpp  wds_problem.cpp  wds_problem_detail.cpp
bevarmejolib/src/problems/: anytown.cpp  anytown_systol25.cpp  hanoi.cpp
bevarmejolib/src/simulation/: hyd_sim_settings.cpp
bevarmejolib/src/utility/: string_manip.cpp  unique_string_sequence.cpp
bevarmejolib/src/utility/pagmo/: containers_help.cpp  containers_serializers.cpp  default_objects_serializers.cpp
bevarmejolib/src/utils/: string_manip.cpp
bevarmejolib/src/wds/: element.cpp  subnetwork.cpp  user_defined_elements_group.cpp  water_distribution_system.cpp  water_distribution_system.ipp
bevarmejolib/src/wds/auxiliary/: curve.cpp  curves.cpp  global_time_options.cpp  global_times.cpp  pattern.cpp  time_series.cpp
bevarmejolib/src/wds/data_structures/: time_series.cpp
bevarmejolib/src/wds/elements/: curve.cpp  dimensioned_link.cpp  element.cpp  junction.cpp  link.cpp  network_element.cpp  node.cpp  pattern.cpp  pipe.cpp  pump.cpp  reservoir.cpp  source.cpp  tank.cpp
bevarmejolib/src/wds/epanet_helpers/: en_time_options.cpp  water_distribution_system.cpp
bevarmejolib/src/wds/utility/: global_times.cpp  time_series.cpp
cli/: CMakeLists.txt  bemeopt.cpp  bemesim.cpp
cli/include/bevarmejo/: cli_settings.hpp  experiment.hpp  factories.hpp  parsers.hpp  simulation.hpp  simulator.hpp
cli/src/: experiment.cpp  parsers.cpp  simulator.cpp
lib/classes/: CMakeLists.txt  water_distribution_system.cpp
lib/logger/: CMakeLists.txt  populationsHandler.cpp  populationsHandler.hpp
tests/: CMakeLists.txt  anytown.inp  junction_tests.cpp  library_metadata_tests.cpp  quantity_series_tests.cpp  results_tests.cpp  tank_tests.cpp  vars_tests.cpp
tests/evaluation/: metric_tests.cpp
tests/utility/: type_traits_tests.cpp
tests/wds/auxiliary/: pattern_tests.cpp  quantity_series2_tests.cpp  quantity_series_tests.cpp  time_series_tests.cpp
(+87 files in other folders)
